test/events/invalidValues/isOnce.js
export const eventHandler = {
    name: "validString",
    isOnce: 1,
    execute: async function () {},
};
